--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 table,
 th,
 td {
@@ -12,7 +11,92 @@ td {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: "inter", sans-serif;
+}
+
+main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    min-width: 700px;
+
+}
+
+fieldset {
+    height: 66px;
+    width: 422px;
+    border-radius: 10px;
+    margin-top: 25px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+}
+
+legend {
+    font-size: 24px;
+    font-family: 'inter';
+
+}
+
+input {
+    height: 33px;
+    width: 422px;
+    border: 0px;
+    font-size: 24px;
+    outline: 0;
+}
+
+button {
+    width: 110px;
+    height: 50px;
+    background-color: #2E13C8;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    margin-top: 25px;
+    border: 1px solid rgb(0, 0, 0);
+}
+
+form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+h1 {
+    font-family: "Inter";
+    font-weight: 400;
+    font-style: normal;
+    font-size: 48px;
+    color: #2E13C8;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+
+}
+
+h3 {
+    font-family: 'Inter';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.51);
+
 }
 
 @media(max-width:768px) {
@@ -22,7 +106,3 @@ body {
 
     }
 }
-/*alt 76
-#2B5ECC
-#2B5ECCAB
-*/
